[package]
authors = ["winebarrel <sugawara@winebarrel.jp>"]
edition = "2018"
name = "xgl"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
getopts = "0.2"
once_cell = "1.5.2"
regex = "1"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0"
